Update CSS + Content

--- a/index.html
+++ b/index.html
@@ -38,26 +38,19 @@
     <div id="profiles">
         <div class="contact-header">PROFILES</div>
         <br>
-        <!--<p class="profile"><a href="https://twitter.com/neutralthoughts" target="_blank" class="profile">Twitter</a></p>-->
-        <!--<p class="profile"><a href="https://soundcloud.com/dandymusicnl" target="_blank" class="profile">SoundCloud</a>-->
-        </p>
+        <p class="profile"><a href="https://www.facebook.com/xodnr" target="_blank" class="profile">FaceBook</a></p>
+        <p class="profile"><a href="https://www.linkedin.com/in/%ED%83%9C%EC%9A%B1-%EA%B9%80-5356b7111/" target="_blank" class="profile">Linkedin</a></p>
+        <p class="profile"><a href="https://speakerdeck.com/teddykims" target="_blank" class="profile">SpeakerDeck</a></p>
     </div>
 </div>
 <div class="main">
     <div id="left">
-        <div id="about">
-            <h2><i class="fa fa-user left" aria-hidden="true"></i> ABOUT</h2>
-            <p>
-                Richard hails from Tulsa. He has earned degrees from the University of Oklahoma and Stanford. (Go
-                Sooners
-                and Cardinals!) Before starting Pied Piper, he worked for Hooli as a part time software developer. While
-                his
-                work focuses on applied information theory, mostly optimizing lossless compression schema of both the
-                length-limited and adaptive variants, his non-work interests range widely, everything from quantum
-                computing
-                to chaos theory. He could tell you about it, but THAT would NOT be a “length-limited” conversation!
-            </p>
-        </div>
+        <!--<div id="about">-->
+            <!--<h2><i class="fa fa-user left" aria-hidden="true"></i> ABOUT</h2>-->
+            <!--<div>-->
+                <!--<p>반갑슈</p>-->
+            <!--</div>-->
+        <!--</div>-->
         <div id="skills">
             <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
             <div>
@@ -65,7 +58,6 @@
                 <span class="keywords">HTML</span>
                 <span class="keywords">CSS</span>
                 <span class="keywords">JavaScript</span>
-                <span class="keywords">Java-Android</span>
                 <h3 class="skills">Back-end</h3>
                 <span class="keywords">PHP</span>
                 <span class="keywords">Node.js</span>
@@ -87,7 +79,7 @@
                 <h3>코딩클럽 (CodingClub) 1기</h3>
                 <h4>DATE</h4>
                 <h3>서울융합인재사관학교 2기</h3>
-                <h4>DATE</h4>
+                <h4>2014.05 ~ 2015.05</h4>
                 <h3>KSIA, 한국 학생 IT 연합 (Korea Student Information technology Alliance)</h3>
                 <h4>DATE</h4>
                 <ul>
@@ -113,11 +105,11 @@
                 <h4>HTML, CSS, JS, PHP, Node.js</h4>
                 <h3>'AddVance' API, 채팅 서버</h3>
                 <h4>PHP-Codeigniter, Node.js</h4>
-                <h3>'Wion' 업체 인트라넷</h3>
+                <h3>'Wion' 인트라넷</h3>
                 <h4>HTML, CSS, JS</h4>
-                <h3>'Lawill' 변호사-의뢰인 중개 웹 서비스</h3>
+                <h3>'Lawill' 변호사-의뢰인 중계 웹 서비스</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'AValue' 부산 부동산 업체 인트라넷</h3>
+                <h3>'AValue' 부동산 인트라넷</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
                 <h3>한국형 'Craig's List' 중고 쇼핑몰 웹 서비스</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
@@ -129,7 +121,7 @@
                 <h4>WordPress</h4>
                 <h3>'작가의 탄생' 웹 서비스</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'동아 시스템' 산업용 밸브 전문 업체</h3>
+                <h3>'동아 시스템' 산업용 밸브 홍보 웹 서비스</h3>
                 <h4>HTML, CSS, JS</h4>
                 <h3>'WizSpell' 게임 홍보 웹 서비스</h3>
                 <h4>WordPress</h4>
@@ -137,13 +129,13 @@
                 <h4>HTML, CSS, JS, PHP-Codeigniter</h4>
                 <h3>'NanuBook' 동영상 관리 웹 서비스</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>대학생 대외 활동 리뷰 서비스</h3>
+                <h3>대학생 대외 활동 리뷰 웹 서비스</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
                 <h3>'EnergyLab' 쇼핑몰</h3>
                 <h4>HTML, CSS, JS</h4>
-                <h3>'NanuGuestHouse'</h3>
+                <h3>'NanuGuestHouse' 게스트하우스 웹 서비스</h3>
                 <h4>WordPress</h4>
-                <h3>'NanuJob'</h3>
+                <h3>'NanuJob' 교육 스타트업 웹 서비스</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
             </div>
         </div>
@@ -154,7 +146,7 @@
             <div>
                 <h3>휴마트컴퍼니, HumartCompany</h3>
                 <h4>DATE</h4>
-                <h3>나누잡, NanuJOB</h3>
+                <h3>나누잡, Nanujob</h3>
                 <h4>DATE</h4>
             </div>
         </div>
