--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <div id="skills">
             <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
             <div>
-                <h3 class="skills">Front-end</h3>
+                <h3 class="skills">Client</h3>
                 <span class="keywords">HTML</span>
                 <span class="keywords">CSS</span>
                 <span class="keywords">JavaScript</span>
-                <h3 class="skills">Back-end</h3>
+                <h3 class="skills">Server</h3>
                 <span class="keywords">PHP</span>
                 <span class="keywords">Node.js</span>
                 <span class="keywords">PHP-Codeigniter</span>
@@ -67,8 +67,20 @@
                 <span class="keywords">Go</span>
                 <span class="keywords">Ruby on Rails</span>
                 <span class="keywords">C</span>
+                <span class="keywords">SQL</span>
+                <span class="keywords">SQL-MySQL</span>
+                <span class="keywords">SQL-MariaDB</span>
+                <h3 class="skills">Program</h3>
+                <span class="keywords">VisualBasic</span>
+                <span class="keywords">Delphi</span>
                 <h3 class="skills">Tools</h3>
                 <span class="keywords">Docker</span>
+                <span class="keywords">Docker</span>
+                <span class="keywords">Github</span>
+                <span class="keywords">Bitbucket</span>
+                <span class="keywords">GitLab</span>
+                <span class="keywords">GDB</span>
+                <span class="keywords">IDA</span>
             </div>
             <br/>
         </div>
