Update CSS + Content

--- a/index.html
+++ b/index.html
@@ -88,26 +88,26 @@
             <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> TEAMS</h2>
             <div>
                 <h3>Seoul.js</h3>
-                <h4>2017.07 ~ </h4>
+                <h4>2017.07 ~ -ing</h4>
                 <h3>코딩클럽 (CodingClub) 1기</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
                 <h3>서울융합인재사관학교 2기</h3>
                 <h4>2014.05 ~ 2015.05</h4>
                 <h3>KSIA, 한국 학생 IT 연합 (Korea Student Information technology Alliance)</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
                 <ul>
                     <li>2012 창립</li>
                     <li>2014 - 2015 부대표 활동</li>
                 </ul>
                 <h3>Pwn2play</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
                 <ul>
-                    <li>2014 국제해킹방어대회 코드게이트 12등</li>
+                    <li>2013 국제해킹방어대회 코드게이트 12등</li>
                 </ul>
                 <h3>WiseGuys</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
                 <h3>Sur3x5f</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
             </div>
             <br/>
         </div>
@@ -160,9 +160,9 @@
             <h2>WORKS <i class="fa fa-suitcase right" aria-hidden="true"></i></h2>
             <div>
                 <h3>휴마트컴퍼니, HumartCompany</h3>
-                <h4>DATE</h4>
+                <h4>2014.11 ~ -ing</h4>
                 <h3>나누잡, Nanujob</h3>
-                <h4>DATE</h4>
+                <h4>2014.03 ~ 2014.10</h4>
             </div>
             <br/>
         </div>
@@ -200,15 +200,15 @@
             <h2>EDUCATION <i class="fa fa-group right" aria-hidden="true"></i></h2>
             <div>
                 <h3>"프론트-백엔드 서버 겉핥기 3기"</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
                 <h3>"프론트-백엔드 서버 겉핥기 2기"</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
                 <h3>"프론트-백엔드 서버 겉핥기 1기"</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
                 <h3>"KSIA 웹 프로그래밍 2기"</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
                 <h3>"KSIA 웹 프로그래밍 1기"</h3>
-                <h4>DATE</h4>
+                <h4>(DATE)</h4>
             </div>
             <br/>
         </div>
@@ -216,9 +216,11 @@
             <h2>REFERENCES <i class="fa fa-connectdevelop right" aria-hidden="true"></i></h2>
             <div>
                 <h3>"현장(실무)에서의 개발 경험기!"</h3>
-                <h4>2015.06.26 - 코딩클럽 6월 세미나</h4>
+                <h4>2015.06.26 - 코딩클럽 6월 세미나 주최</h4>
                 <h3>"그로스해킹으로 배우는 코딩의 의미!"</h3>
-                <h4>2015.05.29 - 코딩클럽 5월 세미나</h4>
+                <h4>2015.05.29 - 코딩클럽 5월 세미나 주최</h4>
+                <h3>2013 국제해킹방어대회 코드게이트 12등</h3>
+                <h4>2013.05.29</h4>
             </div>
             <br/>
         </div>
