--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h2>EDUCATION <i class="fa fa-group right" aria-hidden="true"></i></h2>
             <div>
                 <h3>"프론트-백엔드 서버 겉핥기 3기"</h3>
-                <h4>(DATE)</h4>
+                <h4>2017.08.03 ~ 2017.08.30</h4>
                 <h3>"프론트-백엔드 서버 겉핥기 2기"</h3>
                 <h4>(DATE)</h4>
                 <h3>"프론트-백엔드 서버 겉핥기 1기"</h3>
@@ -215,10 +215,10 @@
         <div id="seminar">
             <h2>REFERENCES <i class="fa fa-connectdevelop right" aria-hidden="true"></i></h2>
             <div>
-                <h3>"현장(실무)에서의 개발 경험기!"</h3>
-                <h4>2015.06.26 - 코딩클럽 6월 세미나 주최</h4>
-                <h3>"그로스해킹으로 배우는 코딩의 의미!"</h3>
-                <h4>2015.05.29 - 코딩클럽 5월 세미나 주최</h4>
+                <h3>"현장(실무)에서의 개발 경험기!" 세미나 주최</h3>
+                <h4>2015.06.26 - 코딩클럽 6월</h4>
+                <h3>"그로스해킹으로 배우는 코딩의 의미!" 세미나 주최</h3>
+                <h4>2015.05.29 - 코딩클럽 5월</h4>
                 <h3>2013 국제해킹방어대회 코드게이트 12등</h3>
                 <h4>2013.05.29</h4>
             </div>
