--- a/index.html
+++ b/index.html
@@ -75,12 +75,15 @@
                 <span class="keywords">Delphi</span>
                 <h3 class="skills">Tools</h3>
                 <span class="keywords">Docker</span>
-                <span class="keywords">Docker</span>
+                <span class="keywords">AWS</span>
+                <span class="keywords">Azure</span>
+                <span class="keywords">BlueMix</span>
+                <span class="keywords">NCloud</span>
+                <span class="keywords">GDB</span>
+                <span class="keywords">IDA</span>
                 <span class="keywords">Github</span>
                 <span class="keywords">Bitbucket</span>
                 <span class="keywords">GitLab</span>
-                <span class="keywords">GDB</span>
-                <span class="keywords">IDA</span>
             </div>
             <br/>
         </div>
@@ -90,24 +93,24 @@
                 <h3>Seoul.js</h3>
                 <h4>2017.07 ~ -ing</h4>
                 <h3>코딩클럽 (CodingClub) 1기</h3>
-                <h4>(DATE)</h4>
+                <h4>2015</h4>
                 <h3>서울융합인재사관학교 2기</h3>
-                <h4>2014.05 ~ 2015.05</h4>
+                <h4>2014 ~ 2015</h4>
                 <h3>KSIA, 한국 학생 IT 연합 (Korea Student Information technology Alliance)</h3>
-                <h4>(DATE)</h4>
+                <h4>2012 ~ 2015</h4>
                 <ul>
                     <li>2012 창립</li>
                     <li>2014 - 2015 부대표 활동</li>
                 </ul>
                 <h3>Pwn2play</h3>
-                <h4>(DATE)</h4>
+                <h4>2013</h4>
                 <ul>
                     <li>2013 국제해킹방어대회 코드게이트 12등</li>
                 </ul>
                 <h3>WiseGuys</h3>
-                <h4>(DATE)</h4>
+                <h4>2012</h4>
                 <h3>Sur3x5f</h3>
-                <h4>(DATE)</h4>
+                <h4>2012</h4>
             </div>
             <br/>
         </div>
