--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
         <div class="contact-header">PROFILES</div>
         <br>
         <p class="profile"><a href="https://www.facebook.com/xodnr" target="_blank" class="profile">FaceBook</a></p>
-        <p class="profile"><a href="https://www.linkedin.com/in/%ED%83%9C%EC%9A%B1-%EA%B9%80-5356b7111/" target="_blank" class="profile">Linkedin</a></p>
-        <p class="profile"><a href="https://speakerdeck.com/teddykims" target="_blank" class="profile">SpeakerDeck</a></p>
+        <p class="profile"><a href="https://www.linkedin.com/in/%ED%83%9C%EC%9A%B1-%EA%B9%80-5356b7111/" target="_blank"
+                              class="profile">Linkedin</a></p>
+        <p class="profile"><a href="https://speakerdeck.com/teddykims" target="_blank" class="profile">SpeakerDeck</a>
+        </p>
     </div>
 </div>
 <div class="main">
     <div id="left">
         <!--<div id="about">-->
-            <!--<h2><i class="fa fa-user left" aria-hidden="true"></i> ABOUT</h2>-->
-            <!--<div>-->
-                <!--<p>반갑슈</p>-->
-            <!--</div>-->
+        <!--<h2><i class="fa fa-user left" aria-hidden="true"></i> ABOUT</h2>-->
+        <!--<div>-->
+        <!--<p>반갑슈</p>-->
+        <!--</div>-->
         <!--</div>-->
         <div id="skills">
             <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
@@ -73,7 +75,7 @@
                 <h3 class="skills">Program</h3>
                 <span class="keywords">VisualBasic</span>
                 <span class="keywords">Delphi</span>
-                <h3 class="skills">Tools</h3>
+                <h3 class="skills">Tools/ETC</h3>
                 <span class="keywords">Docker</span>
                 <span class="keywords">AWS</span>
                 <span class="keywords">Azure</span>
@@ -84,6 +86,9 @@
                 <span class="keywords">Github</span>
                 <span class="keywords">Bitbucket</span>
                 <span class="keywords">GitLab</span>
+                <span class="keywords">Trello</span>
+                <span class="keywords">Jandi</span>
+                <span class="keywords">Slack</span>
             </div>
             <br/>
         </div>
