[1] Update Content, Add Sample Templates

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <div class="contact-header">PROFILES</div>
         <br>
         <p class="profile"><a href="https://www.facebook.com/xodnr" target="_blank" class="profile">FaceBook</a></p>
-        <p class="profile"><a href="https://www.linkedin.com/in/%ED%83%9C%EC%9A%B1-%EA%B9%80-5356b7111/" target="_blank"
-                              class="profile">Linkedin</a></p>
+        <p class="profile"><a href="https://www.linkedin.com/in/%ED%83%9C%EC%9A%B1-%EA%B9%80-5356b7111/" target="_blank" class="profile">Linkedin</a></p>
         <p class="profile"><a href="https://speakerdeck.com/teddykims" target="_blank" class="profile">SpeakerDeck</a>
         </p>
     </div>
@@ -177,6 +176,8 @@
         <div id="volunteer">
             <h2>SPEAKERS <i class="fa fa-child right" aria-hidden="true"></i></h2>
             <div>
+                <h3>"개발자의 인공지능 뽀개기"</h3>
+                <h4>2017.10.15 - 피자뽀개기</h4>
                 <h3>"오늘 내일 바쁜 개발자를 위한 미래 탐방기"</h3>
                 <h4>2017.08.26 - 2017년 8월 IT 네트워킹 정모</h4>
                 <h3>"오늘 내일 바쁜 개발자를 위한 미래 탐방기"</h3>
@@ -240,4 +241,3 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 </body>
 </html>
-
