--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <div class="header">
     <h1>김태욱, Teddy Kims</h1>
     <h3 class="label">Hacker</h3>
-    <div class="contact-header">
-        Seoul, Korea<br>
+    <div class="contact-header">Seoul, Korea<br>
         <!--2712 Broadway St-->
     </div>
     <div id="contact">
