--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
             <h2>SPEAKERS <i class="fa fa-child right" aria-hidden="true"></i></h2>
             <div>
                 <h3>"개발자의 인공지능 뽀개기"</h3>
+                <h4>2017.11.04 - Aegis 10주년 Elite Seminar</h4>
+                <h3>"개발자의 인공지능 뽀개기"</h3>
                 <h4>2017.10.15 - 피자뽀개기</h4>
                 <h3>"오늘 내일 바쁜 개발자를 위한 미래 탐방기"</h3>
                 <h4>2017.08.26 - 2017년 8월 IT 네트워킹 정모</h4>
@@ -207,6 +209,10 @@
         <div id="teach">
             <h2>REFERENCES <i class="fa fa-group right" aria-hidden="true"></i></h2>
             <div>
+                <h3>"프론트-백엔드 서버 겉핥기 4기" 스터디 진행</h3>
+                <h4>2017.10.31 ~ 2017.11.21</h4>
+                <h3>"휴학학교 1기" 스터디 진행</h3>
+                <h4>2017.10.11 ~ 2017.11.01</h4>
                 <h3>"프론트-백엔드 서버 겉핥기 3기" 스터디 진행</h3>
                 <h4>2017.08.03 ~ 2017.08.30</h4>
                 <h3>"프론트-백엔드 서버 겉핥기 2기" 스터디 진행</h3>
