2018년 상반기 활동 내역 업데이트.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="header">
-    <h1>김태욱, Teddy Kims</h1>
+    <h1>김태욱, Teddy</h1>
     <h3 class="label">Hacker</h3>
     <div class="contact-header">Seoul, Korea<br>
         <!--2712 Broadway St-->
@@ -27,11 +27,6 @@
             PHONE <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span>010-3230-9051 <span
                 class="responsive-show"><br><br></span>
         </div>
-        <!--<div class="contact-header">-->
-        <!--WEBSITE <span class="responsive-hidden">•</span> <span class="responsive-show"><br></span><a-->
-        <!--href="http://richardhendricks.com" target="_blank">http://richardhendricks.com</a> <span-->
-        <!--class="responsive-show"><br><br></span>-->
-        <!--</div>-->
     </div>
     <br>
     <div id="profiles">
@@ -54,11 +49,10 @@
         <div id="skills">
             <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
             <div>
-                <h3 class="skills">Client</h3>
+                <h3 class="skills">Language</h3>
                 <span class="keywords">HTML</span>
                 <span class="keywords">CSS</span>
                 <span class="keywords">JavaScript</span>
-                <h3 class="skills">Server</h3>
                 <span class="keywords">PHP</span>
                 <span class="keywords">Node.js</span>
                 <span class="keywords">PHP-Codeigniter</span>
@@ -70,23 +64,22 @@
                 <span class="keywords">SQL</span>
                 <span class="keywords">SQL-MySQL</span>
                 <span class="keywords">SQL-MariaDB</span>
-                <h3 class="skills">Program</h3>
                 <span class="keywords">VisualBasic</span>
                 <span class="keywords">Delphi</span>
-                <h3 class="skills">Tools/ETC</h3>
-                <span class="keywords">Docker</span>
+                <h3 class="skills">Tools</h3>
                 <span class="keywords">AWS</span>
                 <span class="keywords">Azure</span>
-                <span class="keywords">BlueMix</span>
                 <span class="keywords">NCloud</span>
-                <span class="keywords">GDB</span>
-                <span class="keywords">IDA</span>
+                <span class="keywords">Docker</span>
+                <span class="keywords">BlueMix</span>
                 <span class="keywords">Github</span>
                 <span class="keywords">Bitbucket</span>
                 <span class="keywords">GitLab</span>
                 <span class="keywords">Trello</span>
                 <span class="keywords">Jandi</span>
                 <span class="keywords">Slack</span>
+                <span class="keywords">GDB</span>
+                <span class="keywords">IDA</span>
             </div>
             <br/>
         </div>
@@ -94,7 +87,7 @@
             <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> TEAMS</h2>
             <div>
                 <h3>Seoul.js</h3>
-                <h4>2017.07 ~ -ing</h4>
+                <h4>2017</h4>
                 <h3>코딩클럽 (CodingClub) 1기</h3>
                 <h4>2015</h4>
                 <h3>서울융합인재사관학교 2기</h3>
@@ -120,41 +113,45 @@
         <div id="references">
             <h2><i class="fa fa-gears left" aria-hidden="true"></i> PROJECTS</h2>
             <div>
-                <h3>'AddCampus' 웹 서비스 + 인트라넷 웹</h3>
+                <h3>"OdingA" 앱 서비스 서버 + 인트라넷 웹</h3>
+                <h4>HTML, CSS, JS, PHP, Python-Django</h4>
+                <h3>"toyUnboxing" 앱 서비스 서버 + 인트라넷 웹</h3>
+                <h4>HTML, CSS, JS, PHP</h4>
+                <h3>"AddCampus" 웹 서비스 + 인트라넷 웹</h3>
                 <h4>HTML, CSS, JS, PHP, Node.js</h4>
-                <h3>'AddVance' API, 채팅 서버</h3>
+                <h3>"AddVance" API, 채팅 서버</h3>
                 <h4>PHP-Codeigniter, Node.js</h4>
-                <h3>'Wion' 인트라넷 웹</h3>
+                <h3>"Wion" 인트라넷 웹</h3>
                 <h4>HTML, CSS, JS</h4>
-                <h3>'Lawill' 변호사-의뢰인 중계 웹/서버</h3>
+                <h3>"Lawill" 변호사-의뢰인 중계 웹/서버</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'AValue' 부동산 인트라넷 웹/서버</h3>
+                <h3>"AValue" 부동산 인트라넷 웹/서버</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>한국형 'Craig's List' 중고 쇼핑몰 웹/서버</h3>
+                <h3>한국형 "Craig's List" 중고 쇼핑몰 웹/서버</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'YZLab' 의료 물품 쇼핑몰 웹/서버</h3>
+                <h3>"YZLab" 의료 물품 쇼핑몰 웹/서버</h3>
                 <h4>WordPress</h4>
-                <h3>'FirstBike' 자전거 쇼핑몰 웹/서버</h3>
+                <h3>"FirstBike" 자전거 쇼핑몰 웹/서버</h3>
                 <h4>WordPress</h4>
-                <h3>'HereWeSolve' 여행 중계 웹/서버</h3>
+                <h3>"HereWeSolve" 여행 중계 웹/서버</h3>
                 <h4>WordPress</h4>
-                <h3>'작가의 탄생' 웹/서버</h3>
+                <h3>"작가의 탄생" 웹/서버</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'동아 시스템' 산업용 밸브 홍보 웹/서버</h3>
+                <h3>"동아 시스템" 산업용 밸브 홍보 웹/서버</h3>
                 <h4>HTML, CSS, JS</h4>
-                <h3>'WizSpell' 게임 홍보 웹/서버</h3>
+                <h3>"WizSpell" 게임 홍보 웹/서버</h3>
                 <h4>WordPress</h4>
                 <h3>논문 투고 인트라넷 웹/서버 + PDF 출력 서비스</h3>
                 <h4>HTML, CSS, JS, PHP-Codeigniter</h4>
-                <h3>'NanuBook' 동영상 관리 웹/서버</h3>
+                <h3>"NanuBook" 동영상 관리 웹/서버</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
                 <h3>대학생 대외 활동 리뷰 웹/서버</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>'EnergyLab' 쇼핑몰 웹</h3>
+                <h3>"EnergyLab" 쇼핑몰 웹</h3>
                 <h4>HTML, CSS, JS</h4>
-                <h3>'NanuGuestHouse' 게스트하우스 웹/서버</h3>
+                <h3>"NanuGuestHouse" 게스트하우스 웹/서버</h3>
                 <h4>WordPress</h4>
-                <h3>'NanuJob' 교육 스타트업 웹/서버</h3>
+                <h3>"NanuJob" 교육 스타트업 웹/서버</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
             </div>
             <br/>
@@ -175,6 +172,8 @@
         <div id="volunteer">
             <h2>SPEAKERS <i class="fa fa-child right" aria-hidden="true"></i></h2>
             <div>
+                <h3>"소프트웨어와 미래 기술"</h3>
+                <h4>2018.05.26 - 2018년, 5월 소프트웨어에 물들다</h4>
                 <h3>"개발자의 인공지능 뽀개기"</h3>
                 <h4>2017.11.04 - Aegis 10주년 Elite Seminar</h4>
                 <h3>"개발자의 인공지능 뽀개기"</h3>
