[1] 2018 외부 세미나 발표 내용 추가.

--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
         <div id="volunteer">
             <h2>SPEAKERS <i class="fa fa-child right" aria-hidden="true"></i></h2>
             <div>
+                <h3>"심리상담과 IT"</h3>
+                <h4>2018.06.30 - Psygrams 2018</h4>
                 <h3>"소프트웨어와 미래 기술"</h3>
                 <h4>2018.05.26 - 2018년, 5월 소프트웨어에 물들다</h4>
                 <h3>"개발자의 인공지능 뽀개기"</h3>
