Update Projects Content, Teams

--- a/index.html
+++ b/index.html
@@ -46,15 +46,16 @@
                 <span class="keywords">JavaScript</span>
                 <span class="keywords">PHP</span>
                 <span class="keywords">Node.js</span>
-                <span class="keywords">PHP-Codeigniter</span>
-                <span class="keywords">PHP-Laravel</span>
-                <span class="keywords">Python-Django</span>
+                <span class="keywords">Codeigniter</span>
+                <span class="keywords">Laravel</span>
+                <span class="keywords">Python</span>
+                <span class="keywords">Django</span>
                 <span class="keywords">Go</span>
                 <span class="keywords">Ruby on Rails</span>
                 <span class="keywords">C</span>
                 <span class="keywords">SQL</span>
-                <span class="keywords">SQL-MySQL</span>
-                <span class="keywords">SQL-MariaDB</span>
+                <span class="keywords">MySQL</span>
+                <span class="keywords">MariaDB</span>
                 <span class="keywords">VisualBasic</span>
                 <span class="keywords">Delphi</span>
                 <h3 class="skills">Tools</h3>
@@ -77,6 +78,8 @@
         <div id="work">
             <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> TEAMS</h2>
             <div>
+                <h3>Python Korea</h3>
+                <h4>2019</h4>
                 <h3>Seoul.js</h3>
                 <h4>2017</h4>
                 <h3>코딩클럽 (CodingClub) 1기</h3>
@@ -104,45 +107,47 @@
         <div id="references">
             <h2><i class="fa fa-gears left" aria-hidden="true"></i> PROJECTS</h2>
             <div>
-                <h3>"OdingA" 앱 서비스 서버 + 인트라넷 웹</h3>
-                <h4>HTML, CSS, JS, PHP, Python-Django</h4>
-                <h3>"toyUnboxing" 앱 서비스 서버 + 인트라넷 웹</h3>
+                <h3>"EDUUS" 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>"AddCampus" 웹 서비스 + 인트라넷 웹</h3>
+                <h3>"OdingA" 앱 서비스 + 서버(Api, DB) + 인트라넷 웹 서비스</h3>
+                <h4>HTML, CSS, JS, PHP, Python-Django</h4>
+                <h3>"toyUnboxing" 앱 서비스 + 서버(Api, DB) + 인트라넷 웹 서비스</h3>
+                <h4>HTML, CSS, JS, PHP</h4>
+                <h3>"AddCampus" 웹 서비스 + 인트라넷 웹 서비스</h3>
                 <h4>HTML, CSS, JS, PHP, Node.js</h4>
                 <h3>"AddVance" API, 채팅 서버</h3>
                 <h4>PHP-Codeigniter, Node.js</h4>
-                <h3>"Wion" 인트라넷 웹</h3>
+                <h3>"Wion" 인트라넷 웹 서비스</h3>
                 <h4>HTML, CSS, JS</h4>
-                <h3>"Lawill" 변호사-의뢰인 중계 웹/서버</h3>
+                <h3>"Lawill" 변호사-의뢰인 중계 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>"AValue" 부동산 인트라넷 웹/서버</h3>
+                <h3>"AValue" 부동산 인트라넷 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>한국형 "Craig's List" 중고 쇼핑몰 웹/서버</h3>
+                <h3>한국형 "Craig's List" 중고 쇼핑몰 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>"YZLab" 의료 물품 쇼핑몰 웹/서버</h3>
+                <h3>"YZLab" 의료 물품 쇼핑몰 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>WordPress</h4>
-                <h3>"FirstBike" 자전거 쇼핑몰 웹/서버</h3>
+                <h3>"FirstBike" 자전거 쇼핑몰 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>WordPress</h4>
-                <h3>"HereWeSolve" 여행 중계 웹/서버</h3>
+                <h3>"HereWeSolve" 여행 중계 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>WordPress</h4>
-                <h3>"작가의 탄생" 웹/서버</h3>
+                <h3>"작가의 탄생" 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>"동아 시스템" 산업용 밸브 홍보 웹/서버</h3>
+                <h3>"동아 시스템" 산업용 밸브 홍보 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS</h4>
-                <h3>"WizSpell" 게임 홍보 웹/서버</h3>
+                <h3>"WizSpell" 게임 홍보 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>WordPress</h4>
-                <h3>논문 투고 인트라넷 웹/서버 + PDF 출력 서비스</h3>
+                <h3>논문 투고 인트라넷 웹 서비스 + 서버(Api, DB) + PDF 출력 서비스</h3>
                 <h4>HTML, CSS, JS, PHP-Codeigniter</h4>
-                <h3>"NanuBook" 동영상 관리 웹/서버</h3>
+                <h3>"NanuBook" 동영상 관리 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
-                <h3>대학생 대외 활동 리뷰 웹/서버</h3>
+                <h3>대학생 대외 활동 리뷰 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
                 <h3>"EnergyLab" 쇼핑몰 웹</h3>
                 <h4>HTML, CSS, JS</h4>
-                <h3>"NanuGuestHouse" 게스트하우스 웹/서버</h3>
+                <h3>"NanuGuestHouse" 게스트하우스 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>WordPress</h4>
-                <h3>"NanuJob" 교육 스타트업 웹/서버</h3>
+                <h3>"NanuJob" 교육 스타트업 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
             </div>
             <br/>
