--- a/index.html
+++ b/index.html
@@ -38,20 +38,18 @@
 <div class="main">
     <div id="left">
         <div id="skills">
-            <h2><i class="fa fa-tasks left" aria-hidden="true"></i> SKILLS</h2>
+            <h2><i class="fa fa-tasks left" aria-hidden="true"></i> Skills</h2>
             <div>
                 <h3 class="skills">Language</h3>
                 <span class="keywords">HTML</span>
                 <span class="keywords">CSS</span>
                 <span class="keywords">JavaScript</span>
-                <span class="keywords">PHP</span>
                 <span class="keywords">Node.js</span>
+                <span class="keywords">PHP</span>
                 <span class="keywords">Codeigniter</span>
                 <span class="keywords">Laravel</span>
                 <span class="keywords">Python</span>
                 <span class="keywords">Django</span>
-                <span class="keywords">Go</span>
-                <span class="keywords">Ruby on Rails</span>
                 <span class="keywords">C</span>
                 <span class="keywords">SQL</span>
                 <span class="keywords">MySQL</span>
@@ -76,10 +74,10 @@
             <br/>
         </div>
         <div id="work">
-            <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> TEAMS</h2>
+            <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> Teams</h2>
             <div>
                 <h3>Python Korea</h3>
-                <h4>2019</h4>
+                <h4>2019 ~ 2020</h4>
                 <h3>Seoul.js</h3>
                 <h4>2017</h4>
                 <h3>코딩클럽 (CodingClub) 1기</h3>
@@ -105,7 +103,7 @@
             <br/>
         </div>
         <div id="references">
-            <h2><i class="fa fa-gears left" aria-hidden="true"></i> PROJECTS</h2>
+            <h2><i class="fa fa-gears left" aria-hidden="true"></i> Projects</h2>
             <div>
                 <h3>"EDUUS" 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
@@ -156,7 +154,7 @@
     </div>
     <div id="right">
         <div id="work">
-            <h2>WORKS <i class="fa fa-suitcase right" aria-hidden="true"></i></h2>
+            <h2>Companys <i class="fa fa-suitcase right" aria-hidden="true"></i></h2>
             <div>
                 <h3>휴마트컴퍼니, HumartCompany</h3>
                 <h4>2014.11 ~</h4>
@@ -166,7 +164,7 @@
             <br/>
         </div>
         <div id="volunteer">
-            <h2>SPEAKERS <i class="fa fa-child right" aria-hidden="true"></i></h2>
+            <h2>Speakers <i class="fa fa-child right" aria-hidden="true"></i></h2>
             <div>
                 <h3>"심리상담과 IT"</h3>
                 <h4>2018.06.30 - Psygrams 2018</h4>
@@ -204,7 +202,7 @@
             <br/>
         </div>
         <div id="teach">
-            <h2>REFERENCES <i class="fa fa-group right" aria-hidden="true"></i></h2>
+            <h2>References <i class="fa fa-group right" aria-hidden="true"></i></h2>
             <div>
                 <h3>"프론트-백엔드 서버 겉핥기 6기" 스터디 진행</h3>
                 <h4>2018.10.10 ~ 2018.11.07</h4>
