--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <hr/>TeddyKims<br/>Download on <a target="_blank" href="https://github.com/XoDNr/SimpleResumeWithNodeJS">https://github.com/XoDNr/SimpleResumeWithNodeJS</a>
 </footer>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script> -->
 
 </body>
 </html>
