--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
         <div id="skills">
             <h2><i class="fa fa-tasks left" aria-hidden="true"></i> Skills</h2>
             <div>
-                <h3 class="skills">Language</h3>
+                <h3 class="skills">Skills</h3>
                 <span class="keywords">HTML</span>
                 <span class="keywords">CSS</span>
                 <span class="keywords">JavaScript</span>
                 <span class="keywords">Node.js</span>
                 <span class="keywords">PHP</span>
-                <span class="keywords">Codeigniter</span>
                 <span class="keywords">Laravel</span>
                 <span class="keywords">Python</span>
                 <span class="keywords">Django</span>
@@ -56,20 +55,16 @@
                 <span class="keywords">MariaDB</span>
                 <span class="keywords">VisualBasic</span>
                 <span class="keywords">Delphi</span>
-                <h3 class="skills">Tools</h3>
                 <span class="keywords">AWS</span>
                 <span class="keywords">Azure</span>
                 <span class="keywords">NCloud</span>
                 <span class="keywords">Docker</span>
-                <span class="keywords">BlueMix</span>
                 <span class="keywords">Github</span>
                 <span class="keywords">Bitbucket</span>
                 <span class="keywords">GitLab</span>
                 <span class="keywords">Trello</span>
                 <span class="keywords">Jandi</span>
                 <span class="keywords">Slack</span>
-                <span class="keywords">GDB</span>
-                <span class="keywords">IDA</span>
             </div>
             <br/>
         </div>
@@ -77,7 +72,7 @@
             <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> Teams</h2>
             <div>
                 <h3>Python Korea</h3>
-                <h4>2019 ~ 2020</h4>
+                <h4>2019 ~ </h4>
                 <h3>Seoul.js</h3>
                 <h4>2017</h4>
                 <h3>코딩클럽 (CodingClub) 1기</h3>
