--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TeddyKim</title>
+    <title>김태욱, Teddy</title>
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans" rel="stylesheet" type="text/css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
 <div class="header">
     <h1>김태욱, Teddy</h1>
-    <h3 class="label">Hacker</h3>
+    <h3 class="label"></h3>
     <div class="contact-header">Seoul, Korea</div>
     <div id="contact">
         <div class="contact-header">
@@ -40,38 +40,23 @@
         <div id="skills">
             <h2><i class="fa fa-tasks left" aria-hidden="true"></i> Skills</h2>
             <div>
-                <span class="keywords">HTML</span>
-                <span class="keywords">CSS</span>
-                <span class="keywords">JavaScript</span>
-                <span class="keywords">Node.js</span>
-                <span class="keywords">PHP</span>
-                <span class="keywords">Laravel</span>
-                <span class="keywords">Python</span>
-                <span class="keywords">Django</span>
-                <span class="keywords">C</span>
-                <span class="keywords">SQL</span>
-                <span class="keywords">MySQL</span>
-                <span class="keywords">MariaDB</span>
-                <span class="keywords">VisualBasic</span>
-                <span class="keywords">Delphi</span>
-                <span class="keywords">AWS</span>
-                <span class="keywords">Azure</span>
-                <span class="keywords">NCloud</span>
-                <span class="keywords">Docker</span>
-                <span class="keywords">Github</span>
-                <span class="keywords">Bitbucket</span>
-                <span class="keywords">GitLab</span>
-                <span class="keywords">Trello</span>
-                <span class="keywords">Jandi</span>
-                <span class="keywords">Slack</span>
+                <span class="keywords">HTML, CSS</span>
+                <span class="keywords">Vanilla JavaScript</span>
+                <span class="keywords">Node.js, Express, Socket.io</span>
+                <span class="keywords">PHP, Laravel, Lumen</span>
+                <span class="keywords">Python, Django</span>
+                <span class="keywords">TypeScript, Nest.js</span>
+                <span class="keywords">SQL, MySQL, MariaDB, AWS Aurora</span>
+                <span class="keywords">AWS, Azure, NCloud</span>
+                <span class="keywords">Docker, ECR, ECS</span>
             </div>
             <br/>
         </div>
         <div id="work">
             <h2><i class="fa fa-suitcase left" aria-hidden="true"></i> Teams</h2>
             <div>
-                <h3>Python Korea</h3>
-                <h4>2019 ~ </h4>
+                <h3>Python Korea 준비위원회</h3>
+                <h4>2019 ~ 2020</h4>
                 <h3>Seoul.js</h3>
                 <h4>2017</h4>
                 <h3>코딩클럽 (CodingClub) 1기</h3>
@@ -99,6 +84,8 @@
         <div id="references">
             <h2><i class="fa fa-gears left" aria-hidden="true"></i> Projects</h2>
             <div>
+                <h3>"인앤아웃" 웹 서비스 + 서버(Api, DB)</h3>
+                <h4>HTML, CSS, JS, PHP</h4>
                 <h3>"EDUUS" 웹 서비스 + 서버(Api, DB)</h3>
                 <h4>HTML, CSS, JS, PHP</h4>
                 <h3>"OdingA" 앱 서비스 + 서버(Api, DB) + 인트라넷 웹 서비스</h3>
@@ -160,6 +147,8 @@
         <div id="volunteer">
             <h2>Speakers <i class="fa fa-child right" aria-hidden="true"></i></h2>
             <div>
+                <h3>"CI? CD? Python 으로 간단하게 자동 배포 만들어보기!"</h3>
+                <h4>2019.04.20 - 2019년 4월 파이썬 격월 세미나 : Beat The Stress!</h4>
                 <h3>"심리상담과 IT"</h3>
                 <h4>2018.06.30 - Psygrams 2018</h4>
                 <h3>"소프트웨어와 미래 기술"</h3>
